# santa

./: WORKSPACE
.github/workflows/: e2e.yml
Source/common/: BUILD  SNTMetricSet.h  SNTXPCMetricServiceInterface.h  SNTXPCMetricServiceInterface.m  santa.proto
Source/santad/: BUILD  Metrics.h  Metrics.mm  SNTDaemonControlController.mm  SNTPolicyProcessor.h  SNTPolicyProcessor.mm  Santad.mm  SantadDeps.mm
Source/santad/CEL/: BUILD  evaluator.cc  evaluator.h
Source/santad/EventProviders/: SNTEndpointSecurityClient.mm  SNTEndpointSecurityRecorder.mm  SNTEndpointSecurityTreeAwareClient.h  SNTEndpointSecurityTreeAwareClient.mm
Source/santad/EventProviders/EndpointSecurity/: EnrichedTypes.h  Enricher.mm  Message.h  Message.mm
Source/santad/ProcessTree/: BUILD  EndpointSecurityAdapter.cc  EndpointSecurityAdapter.h  EndpointSecurityAdapter.mm  NOTES  SNTEndpointSecurityAdapter.mm  process.cc  process.h  process_tree.proto  tree.cc  tree.h  tree_darwin.h  tree_darwin.mm  tree_test.mm  tree_test_helpers.mm
Source/santad/ProcessTree/Annotations/: BUILD  (+6 more)
Source/santametricservice/: BUILD  Cargo.toml
Source/santametricservice-objc/Formats/: BUILD  SNTMetricFormatTestHelper.m  SNTMetricMonarchJSONFormat.h  SNTMetricMonarchJSONFormat.m  SNTMetricMonarchJSONFormatTest.m
Source/santametricservice-rust/: Cargo.toml
Source/santametricservice-rust/src/: main.rs
Source/santametricservice/src/: lib.rs  main.rs  monarch.rs  structs.rs
Source/santametricservice/testdata/: input.json  monarch.json
Testing/integration/: BUILD  test_config_changes.sh  test_sync_changes.sh
(+1 files in other folders)
