[package]
name = "santametricservice-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
core-foundation = "0.9"
futures = { version = "0.3" }
objc = "0.2.7"
security-framework = "^2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
xpc-connection = { git = "https://github.com/dfrankland/xpc-connection-rs", features = ["audit_token"] }
url = "2.3.1"